flowc/tests/fixtures/lex_bad_number_incomplete.expected.err
tests/fixtures/lex_bad_number_incomplete.flow:2:7: error[E106]: malformed numeric literal '1.'
