flowc/tests/fixtures/lex_bad_number_incomplete.flow
flow f(int) -> float {
  x = 1.
  x
}
